[package]
name = "rewind"
version = "0.5.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
colored = "3.1.1"
chrono = "0.4"
crc32fast = "1.5.0"
lofty = "0.22.4"
rodio = "0.21.1"
rand = "0.9.2"

# TUI dependencies
ratatui = "0.30.0"
crossterm = "0.29.0"
gag = "1.0"

# GUI dependencies (Dioxus desktop)
dioxus = { version = "0.6", features = ["desktop"] }
